--- a/platformio.ini
+++ b/platformio.ini
@@ -14,10 +14,6 @@ board = d1_mini_lite
 framework = arduino
 lib_deps =
     https://github.com/SignalK/SensESP.git
-    ; https://github.com/adafruit/Adafruit_ADS1X15.git
-    Adafruit BMP280 Library
-    ; Adafruit BME280 Library
-    ; Adafruit_ADS1X15
     ReactESP@^0.2.2
     ESP8266WebServer
     DNSServer
@@ -28,15 +24,15 @@ lib_deps =
     ESPAsyncWiFiManager
     ArduinoJson@^5.0.0
     WebSockets
-    OneWire
-    DallasTemperature
+    ; - OneWire
+    ; - DallasTemperature
     ESP8266TrueRandom
     https://github.com/JoaoLopesF/RemoteDebug.git#0b5a9c1a49fd2ade0e3cadc3a3707781e819359a
-    Adafruit ADS1X15
+    ; - Adafruit ADS1X15
     Wire
-    Adafruit BME280 Library
-    Adafruit BMP280 Library
-    Adafruit SHT31 Library
+    ; - Adafruit BME280 Library
+    ; - Adafruit BMP280 Library
+    ; - Adafruit SHT31 Library
     https://github.com/sparkfun/SparkFun_MPU-9250_Breakout_Arduino_Library.git
     ; https://github.com/kriswiner/MPU9250.git
 
